# ChangeLog for mail-client/mail-notification
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-client/mail-notification/ChangeLog,v 1.8 2004/10/17 20:57:01 dholm Exp $

  15 Oct 2004; David Holm <dholm@gentoo.org> mail-notification-0.7.0.ebuild:
  Added to ~ppc.

  07 Oct 2004; Simon Stelling <blubb@gentoo.org>
  mail-notification-0.7.0.ebuild:
  added ~amd64

*mail-notification-0.7.0 (07 Oct 2004)

  07 Oct 2004; Andrej Kacian <ticho@gentoo.org>
  +mail-notification-0.7.0.ebuild:
  Version bump. Added MIME support useflag and appropriate depend on
  dev-libs/gmime. Removed ~amd64 until gmime gets it too.

  09 Sep 2004; Tom Martin <slarti@gentoo.org> mail-notification-0.6.1.ebuild,
  mail-notification-0.6.2.ebuild:
  Marked ~amd64, bug 58543. Patch no longer needed for 0.6.2.

*mail-notification-0.6.2 (09 Sep 2004)

  09 Sep 2004; Andrej Kacian <ticho@gentoo.org>
  mail-notification-0.6.1.ebuild, +mail-notification-0.6.2.ebuild:
  Version bump. Closes #58543, ebuild submitted by alex f <acid.punk@gmx.net>.
  Disabled gmail support for now in all versions. Added imap and ipv6 USE flags
  to all versions. Added URL to gnome bug from 0.6.2 ebuild to 0.6.1.

  06 Sep 2004; Andrej Kacian <ticho@gentoo.org>
  mail-notification-0.6.1.ebuild:
  Removed mention of Gmail from DESCRIPTION for now.

*mail-notification-0.6.1 (05 Sep 2004)

  05 Sep 2004; Tom Martin <slarti@gentoo.org> mail-notification-0.6.1.ebuild:
  Removed gmail USE flag - it violates the Gmail Terms of Use, Section 5.

*mailnotify-0.6.1 (05 Sep 2004)

  05 Sep 2004; Tom Martin <slarti@gentoo.org> +mailnotify-0.6.1.ebuild:
  Initial import. Ebuild submitted by Alex F <acid.punk@gmx.net> in bug 58543.