@@ -1,0 +1,1 @@
+MD5 2593095921c06f228a8b41abb44a3c95 mail-notification-0.8.0.tar.gz 580157
