@@ -1,6 +1,12 @@
 # ChangeLog for mail-client/mail-notification
 # Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/mail-notification/ChangeLog,v 1.8 2004/10/17 20:57:01 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/mail-notification/ChangeLog,v 1.9 2004/11/01 16:48:27 slarti Exp $
+
+*mail-notification-0.8.0 (01 Nov 2004)
+
+  01 Nov 2004; Tom Martin <slarti@gentoo.org>
+  +mail-notification-0.8.0.ebuild:
+  Version bump, for bug 69673.
 
   15 Oct 2004; David Holm <dholm@gentoo.org> mail-notification-0.7.0.ebuild:
   Added to ~ppc.
